--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@prisma/client": "3.9.2",
     "@types/node": "^17.0.18",
     "nodemon": "^2.0.15",
     "prisma": "^3.9.2",
