--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "divisio-backend-graphql-boilerplate",
+  "name": "Rapazes API project",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "git@github.com:Divisores/divisio-backend-graphql-boilerplate.git",
-  "author": "Rodrigo Wippel <rodrigow1992@gmail.com>",
+  "author": "Silvio Galvão <silvio.gabrielgt2000@hotmail.com>",
   "license": "MIT",
   "scripts": {
     "start": "node dist/src/server.js",
